@@ -6,38 +6,32 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>370</width>
-    <height>193</height>
+    <width>302</width>
+    <height>239</height>
    </rect>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <property name="margin">
-    <number>0</number>
-   </property>
-   <item>
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="0" column="0">
     <widget class="QGroupBox" name="groupBox">
      <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0" colspan="2">
+       <widget class="LineEdit" name="search"/>
+      </item>
       <item row="1" column="0" colspan="2">
        <widget class="TreeView" name="tree"/>
       </item>
-      <item row="3" column="0">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
+      <item row="2" column="0">
+       <widget class="SqueezedTextLabel" name="selection">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>294</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
+       </widget>
       </item>
-      <item row="3" column="1">
+      <item row="2" column="1">
        <widget class="QPushButton" name="button"/>
-      </item>
-      <item row="0" column="0" colspan="2">
-       <widget class="LineEdit" name="search"/>
       </item>
      </layout>
     </widget>
@@ -45,6 +39,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>SqueezedTextLabel</class>
+   <extends>QLabel</extends>
+   <header>squeezedtextlabel.h</header>
+  </customwidget>
   <customwidget>
    <class>LineEdit</class>
    <extends>QLineEdit</extends>
